<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/linearLayout">

    <TextView
            android:text="@string/lbl_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/field_phoneNumber"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="1dp"
            tools:ignore="Autofill,LabelFor"/>
    <TextView
            android:text="@string/lbl_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <Spinner
            android:layout_width="214dp"
            android:layout_height="24dp"
            android:id="@+id/spinner_operator"
            app:layout_constraintEnd_toEndOf="@+id/field_phoneNumber"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2" app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/field_phoneNumber"/>
    <TextView
            android:text="@string/lbl_pulsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Spinner
            android:layout_width="214dp"
            android:layout_height="24dp"
            android:id="@+id/spinner_pulsa"

            app:layout_constraintEnd_toEndOf="@+id/spinner_operator"
            app:layout_constraintStart_toStartOf="@+id/spinner_operator"
            app:layout_constraintBottom_toBottomOf="@+id/textView3" app:layout_constraintTop_toTopOf="@+id/textView3"/>
    <TextView
            android:text="@string/lbl_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/lbl_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_harga_voucher"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/field_phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/field_phoneNumber" app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"/>
    <Button
            android:text="@string/lbl_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_harga_voucher" app:layout_constraintHorizontal_bias="0.498"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_tr"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_save" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/field_phoneNumber"/>
</android.support.constraint.ConstraintLayout>
