<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/linearLayout4">

    <TextView
            android:text="@string/lbl_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/lbl_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/lbl_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/textView9"
    />
    <TextView
            android:text="@string/lbl_pulsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView10"
    />
    <TextView
            android:text="@string/lbl_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/textView11"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:text="@string/lbl_transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/textView12"
    />
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:layout_constraintBottom_toBottomOf="@+id/textView8" app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="108dp"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/textView14"
    />
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10" app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintBottom_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/lbl_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/lbl_user_id"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_userid"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@+id/textView14" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14" app:layout_constraintVertical_bias="0.25"/>
    <TextView
            android:text="@string/lbl_phone_number"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_phonenumber"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/detail_lbl_userid"
    />
    <TextView
            android:text="@string/lbl_operator"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_operator"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/detail_lbl_phonenumber"/>
    <TextView
            android:text="@string/lbl_pulsa"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_pulsa"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/detail_lbl_operator"/>
    <TextView
            android:text="@string/lbl_harga"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_price"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/detail_lbl_pulsa"/>
    <TextView
            android:text="@string/lbl_transaction_date"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lbl_transactiondate"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/detail_lbl_price"/>
    <Button
            android:text="Print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_print" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintHorizontal_bias="0.498"/>
</android.support.constraint.ConstraintLayout>
