<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/linearLayout2">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="User ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/hint_username"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="User id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_userId_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="68dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_username_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/lbl_userId_value"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/lbl_btn_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_transaction"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>
    <TextView
            android:text="@string/lbl_list_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/button_transaction"
            app:layout_constraintStart_toStartOf="@+id/button_transaction"
            android:layout_marginStart="8dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="@+id/button_transaction"
            app:layout_constraintEnd_toEndOf="@+id/button_transaction"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:id="@+id/rv_transaction"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/progressBar_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toBottomOf="@+id/button_transaction"
            app:layout_constraintHorizontal_bias="0.498"/>
</android.support.constraint.ConstraintLayout>
